UniDAQ.h

//Callback functions
EXPORTS WORD  CALLBACK  Ixud_SetEventCallback(WORD wBoardNo,WORD wEventType,WORD wInterruptSource,HANDLE *hEvent,PVOID CallbackFun,DWORD dwCallBackParameter);
EXPORTS WORD  CALLBACK  Ixud_RemoveEventCallback(WORD wBoardNo,WORD wInterruptSource);
//Interrupt functions
EXPORTS WORD  CALLBACK  Ixud_InstallIrq(WORD wBoardNo,DWORD dwInterruptMask);
EXPORTS WORD  CALLBACK  Ixud_RemoveIrq(WORD wBoardNo);
//Timer/Counter functions
EXPORTS WORD  CALLBACK  Ixud_ReadCounter(WORD wBoardNo,WORD wChannel, DWORD *dwValue);
		  
EXPORTS WORD  CALLBACK  Ixud_SetCounter(WORD wBoardNo,WORD wChannel,WORD wMode, DWORD dwValue);
		  
EXPORTS WORD  CALLBACK  Ixud_DisableCounter(WORD wBoardNo,WORD wChannel);
EXPORTS WORD  CALLBACK  Ixud_SetFCChannelMode(WORD wBoardNo,WORD wChannel,WORD wMode,WORD wDelayMs);
EXPORTS WORD  CALLBACK  Ixud_ReadFrequency(WORD wBoardNo,WORD wChannel,float *fValue,DWORD dwTimeOutMs,WORD *wStatus);
//Memory I/O functions
EXPORTS WORD  CALLBACK  Ixud_ReadMemory(WORD wBoardNo,DWORD dwOffsetByte,WORD wSize, DWORD *dwValue);
EXPORTS WORD  CALLBACK  Ixud_WriteMemory(WORD wBoardNo,DWORD dwOffsetByte,WORD wSize, DWORD dwValue);
EXPORTS WORD  CALLBACK  Ixud_ReadMemory32(WORD wBoardNo,DWORD dwOffsetByte,DWORD *dwLow, DWORD *dwHigh);
EXPORTS WORD  CALLBACK  Ixud_WriteMemory32(WORD wBoardNo,DWORD dwOffsetByte,DWORD dwLow, DWORD dwHigh);
//Analog Input functions
EXPORTS WORD  CALLBACK  Ixud_ReadAI(WORD wBoardNo,WORD wChannel,WORD wConfig,float *fValue);
EXPORTS WORD  CALLBACK  Ixud_ReadAIH(WORD wBoardNo,WORD wChannel,WORD wConfig,DWORD *dwValue);
EXPORTS WORD  CALLBACK  Ixud_PollingAI(WORD wBoardNo,WORD wChannel,WORD wConfig,DWORD dwDataCount,float fValue[]);
EXPORTS WORD  CALLBACK  Ixud_PollingAIH(WORD wBoardNo,WORD wChannel,WORD wConfig,DWORD dwDataCount,DWORD dwValue[]);
EXPORTS WORD  CALLBACK  Ixud_PollingAIScan(WORD wBoardNo,WORD wChannels,WORD wChannelList[],WORD wConfigList[],DWORD dwDataCountPerChannel,float fValue[]);
EXPORTS WORD  CALLBACK  Ixud_PollingAIScanH(WORD wBoardNo,WORD wChannels,WORD wChannelList[],WORD wConfigList[],DWORD dwDataCountPerChannel,DWORD dwValue[]);
EXPORTS WORD  CALLBACK  Ixud_ConfigAI(WORD wBoardNo,WORD wFIFOSizeKB,DWORD BufferSizeCount,WORD wCardType,WORD wDelaySettlingTime);
EXPORTS WORD  CALLBACK  Ixud_ConfigAIEx(WORD wBoardNo,WORD wFIFOSizeKB,DWORD BufferSizeCount,WORD wCardType,WORD wDelaySettlingTime,DWORD dwMode);
EXPORTS WORD  CALLBACK  Ixud_ClearAIBuffer(WORD wBoardNo);