src/unidaq/UniDaqLibrary.java


	/**
	 * Callback functions<br>
	 * Original signature :
	 * <code>WORD Ixud_SetEventCallback(WORD, WORD, WORD, HANDLE*, PVOID, DWORD)</code><br>
	 * <i>native declaration : line 273</i>
	 */
	public static native short Ixud_SetEventCallback(short wBoardNo, short wEventType, short wInterruptSource,
			UniDaqLibrary.HANDLE hEvent, UniDaqLibrary.PVOID CallbackFun, int dwCallBackParameter);

	/**
	 * Original signature :
	 * <code>WORD Ixud_RemoveEventCallback(WORD, WORD)</code><br>
	 * <i>native declaration : line 274</i>
	 */
	public static native short Ixud_RemoveEventCallback(short wBoardNo, short wInterruptSource);

	/**
	 * Interrupt functions<br>
	 * Original signature : <code>WORD Ixud_InstallIrq(WORD, DWORD)</code><br>
	 * <i>native declaration : line 277</i>
	 */
	public static native short Ixud_InstallIrq(short wBoardNo, int dwInterruptMask);

	/**
	 * Original signature : <code>WORD Ixud_RemoveIrq(WORD)</code><br>
	 * <i>native declaration : line 278</i>
	 */
	public static native short Ixud_RemoveIrq(short wBoardNo);

	/**
	 * Timer/Counter functions<br>
	 * Original signature :
	 * <code>WORD Ixud_ReadCounter(WORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 281</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadCounter(short, short, java.nio.IntBuffer)} and
	 *             {@link #Ixud_ReadCounter(short, short, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadCounter(short wBoardNo, short wChannel, IntByReference dwValue);

	/**
	 * Timer/Counter functions<br>
	 * Original signature :
	 * <code>WORD Ixud_ReadCounter(WORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 281</i>
	 */
	public static native short Ixud_ReadCounter(short wBoardNo, short wChannel, IntBuffer dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_SetCounter(WORD, WORD, WORD, DWORD)</code><br>
	 * <i>native declaration : line 282</i>
	 */
	public static native short Ixud_SetCounter(short wBoardNo, short wChannel, short wMode, int dwValue);

	/**
	 * Original signature : <code>WORD Ixud_DisableCounter(WORD, WORD)</code><br>
	 * <i>native declaration : line 283</i>
	 */
	public static native short Ixud_DisableCounter(short wBoardNo, short wChannel);

	/**
	 * Original signature :
	 * <code>WORD Ixud_SetFCChannelMode(WORD, WORD, WORD, WORD)</code><br>
	 * <i>native declaration : line 284</i>
	 */
	public static native short Ixud_SetFCChannelMode(short wBoardNo, short wChannel, short wMode, short wDelayMs);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadFrequency(WORD, WORD, float*, DWORD, WORD*)</code><br>
	 * <i>native declaration : line 285</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadFrequency(short, short, java.nio.FloatBuffer, int, java.nio.ShortBuffer)}
	 *             and
	 *             {@link #Ixud_ReadFrequency(short, short, com.sun.jna.ptr.FloatByReference, int, com.sun.jna.ptr.ShortByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadFrequency(short wBoardNo, short wChannel, FloatByReference fValue,
			int dwTimeOutMs, ShortByReference wStatus);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadFrequency(WORD, WORD, float*, DWORD, WORD*)</code><br>
	 * <i>native declaration : line 285</i>
	 */
	public static native short Ixud_ReadFrequency(short wBoardNo, short wChannel, FloatBuffer fValue, int dwTimeOutMs,
			ShortBuffer wStatus);

	/**
	 * Memory I/O functions<br>
	 * Original signature :
	 * <code>WORD Ixud_ReadMemory(WORD, DWORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 288</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadMemory(short, int, short, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_ReadMemory(short, int, short, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadMemory(short wBoardNo, int dwOffsetByte, short wSize, IntByReference dwValue);

	/**
	 * Memory I/O functions<br>
	 * Original signature :
	 * <code>WORD Ixud_ReadMemory(WORD, DWORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 288</i>
	 */
	public static native short Ixud_ReadMemory(short wBoardNo, int dwOffsetByte, short wSize, IntBuffer dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WriteMemory(WORD, DWORD, WORD, DWORD)</code><br>
	 * <i>native declaration : line 289</i>
	 */
	public static native short Ixud_WriteMemory(short wBoardNo, int dwOffsetByte, short wSize, int dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadMemory32(WORD, DWORD, DWORD*, DWORD*)</code><br>
	 * <i>native declaration : line 290</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadMemory32(short, int, java.nio.IntBuffer, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_ReadMemory32(short, int, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadMemory32(short wBoardNo, int dwOffsetByte, IntByReference dwLow,
			IntByReference dwHigh);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadMemory32(WORD, DWORD, DWORD*, DWORD*)</code><br>
	 * <i>native declaration : line 290</i>
	 */
	public static native short Ixud_ReadMemory32(short wBoardNo, int dwOffsetByte, IntBuffer dwLow, IntBuffer dwHigh);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WriteMemory32(WORD, DWORD, DWORD, DWORD)</code><br>
	 * <i>native declaration : line 291</i>
	 */
	public static native short Ixud_WriteMemory32(short wBoardNo, int dwOffsetByte, int dwLow, int dwHigh);

	/**
	 * Analog Input functions<br>
	 * Original signature :
	 * <code>WORD Ixud_ReadAI(WORD, WORD, WORD, float*)</code><br>
	 * <i>native declaration : line 294</i><br>
	 */
	public static native short Ixud_ReadAI(short wBoardNo, short wChannel, short wConfig, FloatByReference fValue);

	/**
	 * Analog Input functions<br>
	 * Original signature :
	 * <code>WORD Ixud_ReadAI(WORD, WORD, WORD, float*)</code><br>
	 * <i>native declaration : line 294</i>
	 */
	public static native short Ixud_ReadAI(short wBoardNo, short wChannel, short wConfig, FloatBuffer fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadAIH(WORD, WORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 295</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_ReadAIH(short, short, short, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_ReadAIH(short, short, short, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_ReadAIH(short wBoardNo, short wChannel, short wConfig, IntByReference dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ReadAIH(WORD, WORD, WORD, DWORD*)</code><br>
	 * <i>native declaration : line 295</i>
	 */
	public static native short Ixud_ReadAIH(short wBoardNo, short wChannel, short wConfig, IntBuffer dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_PollingAI(WORD, WORD, WORD, DWORD, float[])</code><br>
	 * <i>native declaration : line 296</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_PollingAI(short, short, short, int, java.nio.FloatBuffer)}
	 *             and
	 *             {@link #Ixud_PollingAI(short, short, short, int, com.sun.jna.ptr.FloatByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_PollingAI(short wBoardNo, short wChannel, short wConfig, int dwDataCount,
			FloatByReference fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_PollingAI(WORD, WORD, WORD, DWORD, float[])</code><br>
	 * <i>native declaration : line 296</i>
	 */
	public static native short Ixud_PollingAI(short wBoardNo, short wChannel, short wConfig, int dwDataCount,
			FloatBuffer fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_PollingAIH(WORD, WORD, WORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 297</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_PollingAIH(short, short, short, int, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_PollingAIH(short, short, short, int, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_PollingAIH(short wBoardNo, short wChannel, short wConfig, int dwDataCount,
			IntByReference dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_PollingAIH(WORD, WORD, WORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 297</i>
	 */
	public static native short Ixud_PollingAIH(short wBoardNo, short wChannel, short wConfig, int dwDataCount,
			IntBuffer dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_PollingAIScan(WORD, WORD, WORD[], WORD[], DWORD, float[])</code><br>
	 * <i>native declaration : line 298</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_PollingAIScan(short, short, java.nio.ShortBuffer, java.nio.ShortBuffer, int, java.nio.FloatBuffer)}
	 *             and
	 *             {@link #Ixud_PollingAIScan(short, short, com.sun.jna.ptr.ShortByReference, com.sun.jna.ptr.ShortByReference, int, com.sun.jna.ptr.FloatByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_PollingAIScan(short wBoardNo, short wChannels, ShortByReference wChannelList,
			ShortByReference wConfigList, int dwDataCountPerChannel, FloatByReference fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_PollingAIScan(WORD, WORD, WORD[], WORD[], DWORD, float[])</code><br>
	 * <i>native declaration : line 298</i>
	 */
	public static native short Ixud_PollingAIScan(short wBoardNo, short wChannels, ShortBuffer wChannelList,
			ShortBuffer wConfigList, int dwDataCountPerChannel, FloatBuffer fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_PollingAIScanH(WORD, WORD, WORD[], WORD[], DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 299</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_PollingAIScanH(short, short, java.nio.ShortBuffer, java.nio.ShortBuffer, int, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_PollingAIScanH(short, short, com.sun.jna.ptr.ShortByReference, com.sun.jna.ptr.ShortByReference, int, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_PollingAIScanH(short wBoardNo, short wChannels, ShortByReference wChannelList,
			ShortByReference wConfigList, int dwDataCountPerChannel, IntByReference dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_PollingAIScanH(WORD, WORD, WORD[], WORD[], DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 299</i>
	 */
	public static native short Ixud_PollingAIScanH(short wBoardNo, short wChannels, ShortBuffer wChannelList,
			ShortBuffer wConfigList, int dwDataCountPerChannel, IntBuffer dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ConfigAI(WORD, WORD, DWORD, WORD, WORD)</code><br>
	 * <i>native declaration : line 300</i>
	 */
	public static native short Ixud_ConfigAI(short wBoardNo, short wFIFOSizeKB, int BufferSizeCount, short wCardType,
			short wDelaySettlingTime);

	/**
	 * Original signature :
	 * <code>WORD Ixud_ConfigAIEx(WORD, WORD, DWORD, WORD, WORD, DWORD)</code><br>
	 * <i>native declaration : line 301</i>
	 */
	public static native short Ixud_ConfigAIEx(short wBoardNo, short wFIFOSizeKB, int BufferSizeCount, short wCardType,
			short wDelaySettlingTime, int dwMode);

	/**
	 * Original signature : <code>WORD Ixud_ClearAIBuffer(WORD)</code><br>
	 * <i>native declaration : line 302</i>
	 */
	public static native short Ixud_ClearAIBuffer(short wBoardNo);
